change vndigitech ioc

--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=12345678Xx
-keyPassword=12345678Xx
-keyAlias=key
-storeFile=/Users/asta/key.jks
+storePassword=admin@123
+keyPassword=admin@123
+keyAlias=alias_01
+storeFile=/home/vietsaclo/Desktop/keystore_01.jks
