--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   shared_preferences: ^0.5.6+3
   flutter_datetime_picker: ^1.3.5
   flutter_screenutil: ^1.0.2
-  connectivity: ^0.4.8+2
+  connectivity: ^0.4.9+5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -58,16 +58,16 @@ dependencies:
   export_video_frame: ^0.0.5+4
   image_picker: ^0.6.6+4
   flutter_plugin_android_lifecycle: 1.0.3
-  flutter_launcher_icons: ^0.8.0
-
-flutter_icons:
-    android: true
-    ios: true
-    image_path: "assets/icons/ic_launcher.png"
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.8.0"
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo_digitech.png"
 
 
 # For information on the generic Dart part of this file, see the
@@ -99,8 +99,6 @@ flutter:
     - assets/images/sample_avatar.png
     - assets/images/bg.png
     - assets/images/logo.png
-    - assets/images/logo_login.png
-    - assets/images/logo_vndigitech.png
     - assets/images/guide.png
     - assets/images/chassis_img.png
     - assets/images/car.png
@@ -128,6 +126,7 @@ flutter:
     - assets/images/guidline_step_2.png
     - assets/images/create_customer.png
     - assets/images/search_customer.png
+    - assets/images/logo_digitech.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
